crates/hir-ty/tests/snapshots/jls_decl_checks__duplicate_class_no_duplicate.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
assertion_line: 324
expression: out
---
FILE /src/com/example/A.java:
package com.example;

class Foo {}
class Bar {}
