crates/hir-ty/tests/snapshots/jls_decl_checks__duplicate_class_same_file.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Two.java:
package com.example;

class Foo {}
class Foo {}

method : duplicate-class: @3:6Duplicate class: com.example.Foo
