crates/hir-ty/tests/snapshots/jls_decl_checks__incompatible_override.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Base.java:
package com.example;

class Base {
    int f() { return 1; }
    int g() { return 1; }
    void h() {}
}

class Derived extends Base {
    String f() { return ""; }
    void g() {}
    int h() { return 1; }
}

method f: incompatible-override: Incompatible override: 'String' cannot override 'int' in 'Base'
method g: incompatible-override: Incompatible override: 'void' cannot override 'int' in 'Base'
method h: incompatible-override: Incompatible override: 'int' cannot override 'void' in 'Base'
