crates/hir-ty/tests/snapshots/jls_decl_checks__local_class_in_local_class_of_same_name.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Locals.java:
package com.example;

class Locals {
    void m() {
        class A { void n() { class A {} } }
    }
}

@4:35: duplicate-local-class: Class 'A' is already defined
