crates/hir-ty/tests/snapshots/jls_decl_checks__local_class_in_sibling_local_class.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Locals.java:
package com.example;

class Locals {
    void m() {
        class A {}
        class B { void n() { class A {} } }
    }
}
