crates/hir-ty/tests/snapshots/jls_decl_checks__local_class_named_like_enclosing_class.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/P.java:
package com.example;

class P {
    void m() {
        class P {}
    }
}

@4:14: duplicate-local-class: Class 'P' is already defined
