crates/hir-ty/tests/snapshots/jls_decl_checks__local_class_named_like_member_type.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Locals.java:
package com.example;

class Locals {
    class A {}
    interface I {}
    void m() {
        class A {}
        class I {}
    }
}
