crates/hir-ty/tests/snapshots/jls_decl_checks__local_class_redeclared_in_method.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Locals.java:
package com.example;

class Locals {
    void m() {
        class A {}
        class A {}
    }
}

@5:14: duplicate-local-class: Class 'A' is already defined
